opam-version: "2.0"
maintainer: "timmcgil@gmail.com"
authors: ["Tim McGilchrist"]
homepage:    "https://github.com/tmcgilchrist/ocaml-bitbucket"
bug-reports: "https://github.com/tmcgilchrist/ocaml-bitbucket/issues"
dev-repo:    "git://github.com/tmcgilchrist/ocaml-bitbucket.git"
doc:         "https://tmcgilchrist.github.io/ocaml-bitbucket/"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "bitbucket"
  "lwt"
  "cohttp-lwt-unix"
  "stringext"
  "lambda-term"
  "cmdliner"
  "base-unix"
  "dune" {build}
]
