opam-version: "2.0"
maintainer: "timmcgil@gmail.com"
authors: ["Tim McGilchrist"]
license: "BSD-3-clause"
homepage:    "https://github.com/tmcgilchrist/ocaml-bitbucket"
bug-reports: "https://github.com/tmcgilchrist/ocaml-bitbucket/issues"
dev-repo:    "git+https://github.com/tmcgilchrist/ocaml-bitbucket.git"
doc:         "https://tmcgilchrist.github.io/ocaml-bitbucket/"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "uri"
  "cohttp"
  "cohttp-lwt"
  "lwt"
  "atdgen"
  "yojson"
  "stringext"
  "dune" {build}
]
synopsis: "Bitbucket API"
description: """
Bitbucket API
"""
